User directory resource implemented
The user directory resource accesses the user directory service provided
by the confapi-commons plugin and exposes its services as a REST endpoint.
Also, AdminOnlyResourceFilter implements administrator access only permission
for all REST resources of this plugin (closes #2).