@@ -46,22 +46,43 @@
             <organization>ASERVO Software GmbH</organization>
             <organizationUrl>https://www.aservo.com</organizationUrl>
         </developer>
+        <developer>
+            <name>Kai Lehmann</name>
+            <email>klehmann@aservo.com</email>
+            <organization>ASERVO Software GmbH</organization>
+            <organizationUrl>https://www.aservo.com</organizationUrl>
+        </developer>
     </developers>
 
     <properties>
-        <amps.version>8.0.2</amps.version>
-        <atlassian.plugin.key>${project.groupId}.${project.artifactId}</atlassian.plugin.key>
-        <atlassian.spring.scanner.version>1.2.13</atlassian.spring.scanner.version>
         <ajp.port>8009</ajp.port>
-        <confluence.version>6.15.10</confluence.version>
-        <confluence.data.version>6.14.0</confluence.data.version>
-        <confapi-commons.version>0.0.1-SNAPSHOT</confapi-commons.version>
+        <amps.version>8.0.2</amps.version>
         <atlassian-crowd.version>2.10.6</atlassian-crowd.version>
+        <atlassian-rest-common.version>3.5.1</atlassian-rest-common.version>
+        <atlassian.gadgets.version>4.3.2.1</atlassian.gadgets.version>
+        <atlassian.plugin.key>${project.groupId}.${project.artifactId}</atlassian.plugin.key>
+        <atlassian.spring.scanner.version>2.1.5</atlassian.spring.scanner.version>
+        <confapi-commons.version>0.0.1-SNAPSHOT</confapi-commons.version>
+        <confluence.data.version>6.14.0</confluence.data.version>
+        <confluence.version>6.15.10</confluence.version>
+        <gson.version>2.2.2-atlassian-1</gson.version>
+        <hibernate-validator.version>5.2.1.Final</hibernate-validator.version>
+        <javax.el-api.version>2.2.4</javax.el-api.version>
         <javax.inject.version>1</javax.inject.version>
-        <spring-context.version>5.2.4.RELEASE</spring-context.version>
-        <plugin.testrunner.version>2.0.1</plugin.testrunner.version>
+        <jaxb-api.version>2.3.1</jaxb-api.version>
+        <jsr311-api.version>1.1.1</jsr311-api.version>
         <junit.version>4.12</junit.version>
+        <lombok.version>1.18.10</lombok.version>
+        <mockito-all.version>1.8.5</mockito-all.version>
         <mockito.version>1.8.5</mockito.version>
+        <openapi-generator-maven-plugin.version>4.2.3</openapi-generator-maven-plugin.version>
+        <plugin.testrunner.version>2.0.1</plugin.testrunner.version>
+        <powermock-api-easymock.version>2.0.5</powermock-api-easymock.version>
+        <servlet-api.version>2.4</servlet-api.version>
+        <spring-context.version>5.2.4.RELEASE</spring-context.version>
+        <swagger-annotations.version>2.1.1</swagger-annotations.version>
+        <swagger-maven-plugin.version>2.1.2</swagger-maven-plugin.version>
+        <wink-client.version>1.4</wink-client.version>
     </properties>
 
     <dependencies>
@@ -101,6 +122,26 @@
         </dependency>
 
         <dependency>
+            <groupId>com.atlassian.gadgets</groupId>
+            <artifactId>atlassian-gadgets-api</artifactId>
+            <version>${atlassian.gadgets.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.atlassian.gadgets</groupId>
+            <artifactId>atlassian-gadgets-spi</artifactId>
+            <version>${atlassian.gadgets.version}</version>
+            <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>net.sourceforge.findbugs</groupId>
+                    <artifactId>jsr305</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
             <groupId>javax.inject</groupId>
             <artifactId>javax.inject</artifactId>
             <version>${javax.inject.version}</version>
@@ -110,7 +151,7 @@
         <dependency>
             <groupId>javax.ws.rs</groupId>
             <artifactId>jsr311-api</artifactId>
-            <version>1.1.1</version>
+            <version>${jsr311-api.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -124,28 +165,35 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.2.2-atlassian-1</version>
+            <version>${gson.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
-            <version>2.4</version>
+            <version>${servlet-api.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
-            <version>2.3.1</version>
+            <version>${jaxb-api.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>com.atlassian.plugins.rest</groupId>
             <artifactId>atlassian-rest-common</artifactId>
-            <version>3.5.1</version>
+            <version>${atlassian-rest-common.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -175,17 +223,68 @@
 
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>${mockito.version}</version>
+            <artifactId>mockito-all</artifactId>
+            <version>${mockito-all.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-api-easymock</artifactId>
+            <version>${powermock-api-easymock.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-module-junit4</artifactId>
+            <version>${powermock-api-easymock.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.wink</groupId>
             <artifactId>wink-client</artifactId>
-            <version>1.4</version>
+            <version>${wink-client.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate-validator.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator-annotation-processor</artifactId>
+            <version>${hibernate-validator.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.el</groupId>
+            <artifactId>javax.el-api</artifactId>
+            <version>${javax.el-api.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish.web</groupId>
+            <artifactId>javax.el</artifactId>
+            <version>${javax.el-api.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- FOR AUTOMATIC SWAGGER REST DOCUMENTATION -->
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>${swagger-annotations.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -199,6 +298,7 @@
                     <productVersion>${confluence.version}</productVersion>
                     <productDataVersion>${confluence.data.version}</productDataVersion>
                     <enableQuickReload>true</enableQuickReload>
+                    <jvmArgs>-Xms1g -Xmx4g -XX:MaxPermSize=1g -XX:-UseGCOverheadLimit -server</jvmArgs>
                     <!-- See here for an explanation of default instructions: -->
                     <!-- https://developer.atlassian.com/docs/advanced-topics/configuration-of-instructions-in-atlassian-plugins -->
                     <instructions>
@@ -244,6 +344,49 @@
                     </scannedDependencies>
                     <verbose>true</verbose>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>io.openapitools.swagger</groupId>
+                <artifactId>swagger-maven-plugin</artifactId>
+                <version>${swagger-maven-plugin.version}</version>
+                <configuration>
+                    <resourcePackages>
+                        <resourcePackage>de.aservo.atlassian.confluence.confapi.rest</resourcePackage>
+                    </resourcePackages>
+                    <outputDirectory>${basedir}/</outputDirectory>
+                    <outputFilename>swagger</outputFilename>
+                    <outputFormats>YAML</outputFormats>
+                    <prettyPrint>true</prettyPrint>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <phase>package</phase>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.openapitools</groupId>
+                <artifactId>openapi-generator-maven-plugin</artifactId>
+                <version>${openapi-generator-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <phase>package</phase>
+                        <configuration>
+                            <inputSpec>${project.basedir}/swagger.yaml</inputSpec>
+                            <generatorName>markdown</generatorName>
+                            <skipValidateSpec>true</skipValidateSpec>
+                            <output>doc/swagger</output>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
